objects/gvp__Budget__c.object
<CustomObject>
    <description>Total budget in dollars for specified brand and period</description>
    <fields>
        <fullName>gvp__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used as a filter on the Planned Spend and Invoice VF pages.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__Amount_Actual__c</fullName>
        <label>$ Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gvp__Amount_Committed__c</fullName>
        <label>$ Committed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gvp__Amount_Planned__c</fullName>
        <label>$ Planned</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gvp__Amount__c</fullName>
        <label>Budget Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gvp__Balance__c</fullName>
        <formula>gvp__Amount__c  -   gvp__Total_Budget_Spend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gvp__Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>gvp__Brand__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Budget_Key__c</fullName>
        <externalId>true</externalId>
        <label>Budget Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>gvp__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>gvp__Company__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Cost_Center__c</fullName>
        <description>Most likely populated by a workflow based upon other fields related to budget.</description>
        <label>Cost Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Currency_Code__c</fullName>
        <description>Exists here in case the Budget is in a different currency than the corporate currency and there is no account associated with this field.</description>
        <label>Currency Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_Currency_1__c</fullName>
        <label>Custom Currency 1</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_Currency_2__c</fullName>
        <label>Custom Currency 2</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_Date_1__c</fullName>
        <label>Custom Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_Date_2__c</fullName>
        <label>Custom Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_Number_1__c</fullName>
        <label>Custom Number 1</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_Number_2__c</fullName>
        <label>Custom Number 2</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_Picklist_1__c</fullName>
        <label>Custom Picklist 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Option 1</fullName>
                </value>
                <value>
                    <fullName>Option 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gvp__Custom_Picklist_2__c</fullName>
        <label>Custom Picklist 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Option 1</fullName>
                </value>
                <value>
                    <fullName>Option 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gvp__Custom_Text_1__c</fullName>
        <label>Custom Text 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_Text_2__c</fullName>
        <label>Custom Text 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_Text_3__c</fullName>
        <label>Custom Text 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Description__c</fullName>
        <description>How is this budget to be used and what do you aim to accomplish</description>
        <inlineHelpText>How is this budget to be used and what do you aim to accomplish</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>gvp__Division__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Division</label>
        <referenceTo>gvp__Division__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gvp__Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>gvp__Region__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Spend_Type__c</fullName>
        <description>Most likely will be populated by a workflow based upon other data entered in the budget process.</description>
        <label>Spend Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gvp__Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>gvp__Territory__c</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Time_Period__c</fullName>
        <description>4 digit year</description>
        <inlineHelpText>4 digit year</inlineHelpText>
        <label>Time Period</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Total_Budget_Plan__c</fullName>
        <label>Total Budget Plan</label>
        <summarizedField>gvp__Budget_Plan__c.gvp__Amount__c</summarizedField>
        <summaryForeignKey>gvp__Budget_Plan__c.gvp__Parent_Budget__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>gvp__Total_Budget_Spend__c</fullName>
        <formula>gvp__Amount_Actual__c +  gvp__Amount_Committed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Actual + Committed</inlineHelpText>
        <label>Total Budget Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Budget</label>
    <listViews>
        <fullName>gvp__All_Budgets</fullName>
        <columns>NAME</columns>
        <columns>gvp__Brand__c</columns>
        <columns>gvp__Time_Period__c</columns>
        <columns>gvp__Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Budgets</label>
    </listViews>
    <nameField>
        <label>Budget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budgets</pluralLabel>
    <recordTypes>
        <fullName>gvp__Sales_Budget</fullName>
        <active>true</active>
        <description>Bank created as rate per case of sold goods</description>
        <label>Sales Budget</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>